# emailer

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  configuration.yml  spec.yml
configuration/: base.yml  local.yml  production.yml
scripts/: init_db.sh  update_app.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telementry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
