[package]
name = "emailer"
version = "0.1.0"
authors = ["Haruki Jay Shimada <peaske16180@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
config = "0.13.1"
chrono = "0.4.15"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

[dependencies.uuid]
version = "0.8.2"
features = [
  "v4"
]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.serde]
version = "1.0.136"
features = [
  "derive"
]

[dependencies.sqlx]
version = "0.5.7"
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dependencies.tracing]
version = "0.1"
features = [
  "log"
]

[dependencies.tracing-subscriber]
version = "0.3"
features = [
  "registry",
  "env-filter"
]

[dev-dependencies]
reqwest = "0.11.10"
