[package]
name = "emailer"
version = "0.1.0"
authors = ["Haruki Jay Shimada <peaske16180@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# actix-web... create server
actix-web = "4"
# config... read configuration files we set in root directory
config = "0.13.1"
# chrono... handle times (e.g. UTC) easier
chrono = "0.4.15"
# tracing-bunyan-formatter... prettify tracing log output
tracing-bunyan-formatter = "0.3"
# tracing-log... replace env_logger or actix-web's default logger option with 
#   `tracing-log` for better session-like logging.
tracing-log = "0.1"
# tracing-actix-web... allows us to drop-in replace `tracing-log` with actix-web's 
#   default logging option.
tracing-actix-web = "0.5"
serde-aux = "3"
# unicode-segmentation... use to handle graphemes in names 
unicode-segmentation = "1.9.0"
# claim... use to extract better information from `panic!` errors
claim = "0.5.0"
# validation... use to validate emails
validator = "0.15.0"

# uuid... use to generate uuids for requests, users, and other.
[dependencies.uuid]
version = "0.8.2"
features = [
  "v4"
]

# tokio... handle futures in rust
[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

# serde... handle json and other data formats that need 
# serialization/deseralization to work hand-in-hand with rust.
[dependencies.serde]
version = "1.0.136"
features = [
  "derive"
]

# sqlx... API to use PostgreSQL easier
[dependencies.sqlx]
version = "0.5.7"
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

# tracing... stands in as our choice over other logging libraries such as 
#   `env_logger` and `log`
[dependencies.tracing]
version = "0.1"
features = [
  "log"
]

[dependencies.tracing-subscriber]
version = "0.3"
features = [
  "registry",
  "env-filter"
]

# secrecy... catch sensitive information from being outputted to loggers.
[dependencies.secrecy]
version = "0.8"
features = [
  "serde"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = [
  "json",
  "rustls-tls"
]

[dev-dependencies]
# once_cell... used to call initialization functions (setting up PostgreSQL for
#  testing environment) only once.
once_cell = "1"
# fake... create fake emails to use in integration tests
fake = "~2.3"
# quickcheck, quickcheck_macros... better property-based testing
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand_core = "0.6.3"
wiremock = "0.5"
serde_json = "1"

[profile.dev]
split-debuginfo = "unpacked"